kubernetes/apps/base/home-system/zigbee2mqtt/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zigbee2mqtt
  namespace: home-system
spec:
  parentRefs:
    - name: envoy-external
      namespace: network-system
      sectionName: https
  hostnames:
    - 'zigbee2mqtt.${CLUSTER_DOMAIN}'
  rules:
    - backendRefs:
        - name: zigbee2mqtt
          port: 80
          weight: 100
