kubernetes/apps/base/home-system/zigbee2mqtt/app/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: zigbee2mqtt
spec:
  podSelector:
    matchLabels:
      name: zigbee2mqtt
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: istio-ingress
          podSelector:
            matchLabels:
              app: istio-ingressgateway
      ports:
        - port: 8080
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
    - to:
        - podSelector:
            matchLabels:
              name: mosquitto
      ports:
        - port: 1883
    # Zigbee2mqtt runs on its own dedicated loadbalancer IP
    - to:
        - ipBlock:
            cidr: ${EXT_ZIGBEE_CONTROLLER_IP}/32
      ports:
        - port: 6638
          protocol: TCP
